Showcase added + misc.
- Added Lato font files and imported one
- changed sass colors for some bootstrap color classes
-changed dimensions of pool pic in carousel/reel

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url(fonts.css);
+
+body{
+    padding-top: 70px;
+}
 .showcase-bg-style{
     background-image: url('../assets/imgs/STS_PITCH.png');
     background-size: auto;
@@ -39,5 +44,9 @@
         font-weight: bold;
         font-size: 425%;
     }
+}
+
+.about-us-title{
+    font-family: 'Lato Bold', Arial, Helvetica, sans-serif;
 }
 
