--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,4 @@ $primary: #32CD32;
 $warning:       #DBF227;
 $dark:          #042940;
 
-@import '../node_modules/bootstrap/scss/bootstrap.scss'
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
