Website Structure Done

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     padding-top: 70px;
 }
 .showcase-bg-style{
-    background-image: url('../assets/imgs/STS_PITCH.png');
+    background-image: url('../assets/imgs/STS_PITCH.jpg');
     background-size: auto;
     background-position: center;
     padding: 50px;
