--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,3 +2,8 @@
     font-family: 'Lato Bold';
     src: url("../assets/fonts/Lato-Bold.ttf");
 }
+
+@font-face {
+    font-family: 'Lato Black';
+    src: url("../assets/fonts/Lato-Black.ttf");
+}
